@@ -1,3 +1,8 @@
+2004-03-24  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/ext/mt_allocator.h (__mt_alloc<>::allocate,
+	__mt_alloc<>::deallocate): Avoid redundant conditionals.
+
 2004-03-23  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/locale_facets.h: Tweaks for 80 column.
